log
Thu 09 May 2024 03:15:46 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:9: error: ‘nuevo’ undeclared (first use in this function)
   41 |     if (nuevo == NULL) {
      |         ^~~~~
treemap.c:41:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fea689b
